--- a/templates/electronics.html
+++ b/templates/electronics.html
@@ -886,7 +886,7 @@
           >Home Theater, TV & Video <i class="uil uil-arrow-right"></i
         ></a>
         <a href="#" id="8" onclick="change_text(this.id)"
-          >Mobiles & Accessories <i class="uil uil-arrow-right"></i
+          >Mobiles <i class="uil uil-arrow-right"></i
         ></a>
         <a href="#" id="9" onclick="change_text(this.id)"
           >Portable Media Players <i class="uil uil-arrow-right"></i
@@ -1900,6 +1900,12 @@
           ],
         },
         {
+          "Brand": 
+          [
+          "Samsung", "Apple", "Realme", "Redmi","Oneplus", "Nokia", "Oppo", "Vivo"
+          ]
+        },
+        {
           "Cellular Phone Operating System Version": [
             "Android 10.0",
             "Android 11.0",
@@ -2362,6 +2368,12 @@
         { Availability: ["Include Out of Stock"] },
       ],
       11: [
+      {
+        "Brand": 
+        [
+        "Samsung", "Apple", "Realme", "Asus","Lenovo", "Nokia", "Xiaomi", "Lava"
+        ]
+      },
         {
           "Tablet Computer Operating System": [
             "Android",
@@ -2616,6 +2628,12 @@
       ],
 
       13: [
+      {
+        "Brand": 
+        [
+        "Hp", "Mac", "Acer", "Asus","Lenovo", "MSI", "Dell", "Realme"
+        ]
+      },
         {
           "Laptop CPU Manufacturer": [
             "AMD",
