--- a/templates/productDisplay.html
+++ b/templates/productDisplay.html
@@ -729,7 +729,7 @@
                         <td>{{forloop.counter}}.</td>
                         <td>{{pro.name}}</td>
                         <td>{{pro.price}}</td>
-                        <td>{{pro.product_url}}</td>
+                        <td><a href="{{pro.product_url}}" target="_blank">Visit Site</a></td>
                         <td>{{pro.onlineStore}}</td>
                         <td>{{pro.stars}}</td>
                         <td>{{pro.rating_count}}</td>
