--- a/templates/index.html
+++ b/templates/index.html
@@ -1248,7 +1248,8 @@
         <div class="responsive-container-block big-container">
             <div class="responsive-container-block container" style="display: flex; justify-content: space-around;">
                 <div class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-7 wk-ipadp-10 line" id="i69b-2">
-                    <form class="form-box">
+                    <form class="form-box" method="POST" action="{% url 'contact' %}">
+                        {% csrf_token %}
                         <div class="container-block form-wrapper">
                             <div class="head-text-box">
                                 <p class="text-blk contactus-head" style="color:rgb(252, 252, 252);">
@@ -1279,7 +1280,7 @@
                                 <p class="text-blk input-title" style="color:rgb(252, 252, 252);">
                                     WHAT DO YOU HAVE IN MIND
                                 </p>
-                                <textarea class="textinput" id="i5vyy-6" placeholder="Please enter query..."></textarea>
+                                <textarea name="textinput" class="textinput" id="i5vyy-6" placeholder="Please enter query..."></textarea>
                             </div>
                             <div class="btn-wrapper">
                                 <button class="submit-btn">
