--- a/templates/electronics.html
+++ b/templates/electronics.html
@@ -794,19 +794,19 @@
         </div>
         <div class="slides">
           <img
-            src="https://source.unsplash.com/random/?ecommerce,electronics sale,gadgets sale"
+            src="https://picsum.photos/1000/500"
             alt=""
           />
         </div>
         <div class="slides">
           <img
-            src="https://source.unsplash.com/random/?smartphone sale in amazon flipkart"
+            src="https://picsum.photos/1000/500"
             alt=""
           />
         </div>
         <div class="slides">
           <img
-            src="https://source.unsplash.com/random/?laptop sale, tv sale"
+            src="https://picsum.photos/1000/500"
             alt=""
           />
         </div>
